# esp32-smart-vending

./: .gitignore  2026嵌入式大赛应用赛道作品报告_完成版.docx  2026嵌入式大赛应用赛道作品报告模板(1)(1).docx  CLAUDE.md  CMakeLists.txt  README.md  fill_report.py  fix_table.py  my_commands_cn.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32p4  update_report.py  主要创新点.md  主要创新点_正文.md  报告补充内容.md
components/admin_auth/: CMakeLists.txt  admin_auth.c
components/admin_auth/include/: admin_auth.h
components/cam_mipi_ov56457/: camera.c  camera.h
components/components/cam_mipi_ov56457/: CMakeLists.txt  Kconfig  camera.c  camera.h  idf_component.yml
components/components/spi_lcd_touch/: CMakeLists.txt  spi_lcd_touch.c
components/components/who_cam/: CMakeLists.txt  who_cam.hpp  who_cam_define.hpp
components/components/who_cam/who_ov5647_cam/: who_ov5647_cam.cpp  who_ov5647_cam.hpp
components/components/who_frame_cap/: who_frame_cap_node.cpp
components/components/who_recognition/: CMakeLists.txt
components/components/who_sdcard_fatfs/: CMakeLists.txt  Kconfig  who_sdcard_fatfs.cpp
components/components/who_task/: who_task_state.cpp
components/face_id_manager/: CMakeLists.txt  face_id_manager.c
components/face_id_manager/include/: face_id_manager.h
components/inventory_manager/: CMakeLists.txt  inventory_manager.c
components/inventory_manager/include/: inventory_manager.h
components/order_manager/: CMakeLists.txt  order_manager.c
components/order_manager/include/: order_manager.h
components/spi_lcd_touch/: CMakeLists.txt  Kconfig  idf_component.yml  spi_lcd_touch.c
components/spi_lcd_touch/include/: spi_lcd_touch.h
components/vending_machine_ui/: CMakeLists.txt  vending_machine_ui.c
components/vending_machine_ui/include/: vending_machine.h
components/voice_control/: CMakeLists.txt  esp_board_init.c  voice_control.c
components/voice_control/include/: esp_board_init.h  voice_control.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  jpeg_encoder.c  jpeg_encoder.h  main.cpp  web_page.h  web_server.cpp  web_server.h  wifi_init.c  wifi_init.h
mini-program-vending/: app.js  app.json  app.wxss  project.config.json  project.private.config.json
mini-program-vending/pages/goods/: goods.js  goods.json  goods.wxml  goods.wxss
mini-program-vending/pages/index/: index.js  index.json  index.wxml  index.wxss
mini-program-vending/pages/inventory/: inventory.js  inventory.wxml  inventory.wxss
mini-program-vending/pages/mine/: mine.js  mine.wxml  mine.wxss
mini-program-vending/pages/order/: order.js  order.wxml  order.wxss
mini-program-vending/pages/order-confirm/: order-confirm.js  order-confirm.json  order-confirm.wxml  order-confirm.wxss
mini-program-vending/pages/sales/: sales.js  sales.json  sales.wxml  sales.wxss
mini-program-vending/utils/: api.js
(+10 files in other folders)
